<resources>
    <string name="app_name">CanDo</string>

    <string name="dashboard_label">Dashboard</string>
    <string name="organizations_label">Organizations</string>
    <string name="sessions_label">Sessions</string>
    <string name="session_label">Session</string>


    <!-- SIGN IN PAGE -->
    <string name="sign_in_button">Sign in</string>

    <string name="sign_in_sign_up_now"><u>Sign up now!</u></string>

    <string name="form_email_hint">Email</string>
    <string name="form_password_hint">Password</string>
    <string name="form_verify_password_hint">Verify password</string>
    <string name="form_username_hint">Username</string>
    <string name="form_firstname_hint">First name</string>
    <string name="form_lastname_hint">Last name</string>
    <string name="sign_up_button">Sign Up</string>

    <string name="sign_up_already_member">Already a member? <u>Sign in</u></string>

    <string name="sign_up_error_title">Failed to create account</string>
    <string name="sign_up_progress_message">Creating an account …</string>

    <string name="sign_in_error_title">Failed to sign in</string>
    <string name="sign_in_progress_message">Signing in …</string>
    <string name="sign_in_error_wrong_credentials">Please make sure your credentials are correct and try again.</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <!-- DIALOG -->
    <string name="dialog_ok">OK</string>
    <string name="dialog_error_title_default">Error</string>
    <string name="dialog_error_message_default">Oops, something went wrong. Please try again later.</string>
    <string name="dialog_error_user_creation">Oops, we could not create a user account for you. Please try again later.</string>
    <string name="error_connection_failure">Could not connect to the server. Please try again later.</string>
    <string name="error_invalid_email">e-mail is invalid. (e.g. user@cando.com)</string>
    <string name="error_field_required">field is required</string>
    <string name="error_verify">value is not the same</string>
    <string name="dialog_error_title_unauthenticated">Session expired</string>
    <string name="dialog_error_message_unauthenticated">Your session has expired. You will be redirected to the sign in page.</string>
    <string name="action_sign_out">sign out</string>
    <string name="profile_header_title_email">Email</string>
    <string name="profile_header_title_firstname">Firstname</string>
    <string name="profile_header_title_lastname">Lastname</string>
    <string name="profile_header_title_username">Username</string>
    <string name="retrieving_data">retrieving data …</string>
    <string name="nothing_to_show_organizations">You are not a part of any organizations</string>
    <string name="nothing_to_show_sessions">You are not a part of any sessions yet</string>
    <string name="action_organizations">My organizations</string>
    <string name="action_sessions">My sessions</string>
    <string name="action_join">join</string>
    <string name="action_decline">decline</string>
    <string name="action_session_add_cards">add new card</string>
    <string name="session_joining_session">joining</string>
    <string name="session_waiting_for_users_to_join">Waiting for other users to join</string>
    <string name="session_waiting_for_users_to_add_cards">Waiting for other users to add cards</string>
    <string name="session_waiting_for_users_to_choose_cards">Waiting for other users to choose cards</string>
    <string name="session_waiting_for_users_to_review_cards">Waiting for other users to review cards</string>
    <string name="session_adding_cards">adding cards</string>
    <string name="no_cards_selected">No cards selected</string>
    <string name="session_saving_cards">saving cards</string>
    <string name="session_action_start_game">start game</string>
    <string name="session_starting_game">starting game …</string>
    <string name="game_launcher_waiting_text">Waiting for organizer to start the game</string>
    <string name="session_waiting_for_organizer_to_start_session">Waiting for organizor to start session</string>
    <string name="processing_vote">processing vote …</string>
    <string name="session_inviting_users">inviting users …</string>
    <string name="action_session_add_form_field">add field</string>
    <string name="saving_reviews">Saving reviews</string>
    <string name="form_add_card_text">Enter a description for your card</string>
    <string name="form_add_review_text">Enter a comment for this card</string>
    <string name="action_accept">accept</string>
    <string name="ending_game">ending game...</string>
    <string name="session_invite_label">Invite users</string>
    <string name="session_users_joining_label">Join session</string>
    <string name="session_adding_cards_label">Add cards</string>
    <string name="session_review_cards_label">Review cards</string>
    <string name="session_choosing_cards_label">Choose cards</string>
    <string name="session_game_launcher_label">Game launcher</string>
    <string name="session_game_label">Game</string>
    <string name="session_finish_label">Winning cards</string>
</resources>
